--- a/views/index.html
+++ b/views/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:image" content="https://e.top4top.io/p_2010lz9211.jpg" /> 
 
-<meta property="og:title" content="Alphabot - APIs" /> <meta property="og:description" content="Made By Me ᴹᴿ᭄zeeoneㄙ "/> 
+<meta property="og:title" content="RealBot - APIs" /> <meta property="og:description" content="Made By Zaki "/> 
 
 <link rel="shortcut icon" href="https://e.top4top.io/p_2010lz9211.jpg" type="image/x-icon" />
 
-  <title>Alphabot - Rest Api's</title>
+  <title>Realbot - Rest Api's</title>
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/ruang-admin.min.css" rel="stylesheet">
@@ -616,19 +616,19 @@ button1:hover {
       </li>
       <li class="nav-item">
           
-            <a class="nav-link collapsed" href="https://wa.me/message/JBGU4J2DVYEDK1">
+            <a class="nav-link collapsed" href="https://wa.me/16318954579">
             <i class="fab fa-fw fa-whatsapp"></i>
                     <span>WhatsApp</span>
             </a>
       </li>
     
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://instagram.com/zeeoneofc">
+            <a class="nav-link collapsed" href="https://instagram.com/shopgame.revo">
             <i class="fab fa-fw fa-instagram"></i>
                     <span>Instagram</span>
             </a>
           <li class="nav-item">
-            <a class="nav-link collapsed" href="https://t.me/zeeoneee">
+            <a class="nav-link collapsed" href="https://t.me/zakigaming7">
             <i class="fab fa-fw fa-telegram"></i>
                     <span>Telegram</span>
             </a>
@@ -640,7 +640,7 @@ button1:hover {
             </a>
       </li>
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://github.com/zeeoneofc">
+            <a class="nav-link collapsed" href="https://github.com/realbotwa">
             <i class="fab fa-fw fa-github"></i>
                     <span>Github</span>
             </a>
@@ -652,7 +652,7 @@ button1:hover {
             </a>
       </li>
       <hr class="sidebar-divider">
-      <div class="version"><b>Made With ♥️ By Zeeone</b></div>
+      <div class="version"><b>Made With ♥️ By Realbot</b></div>
     </ul>
     <!-- Sidebar -->
     <div id="content-wrapper" class="d-flex flex-column">
@@ -811,7 +811,7 @@ button1:hover {
                     </div>
                   </div>
                 </a>
-                <a class="dropdown-item text-center small text-gray-500" href="https://www.instagram.com/zeeoneofc">View All Information</a>
+                <a class="dropdown-item text-center small text-gray-500" href="https://www.instagram.com/shopgame.revo">View All Information</a>
               </div>
             </li>
             <div class="topbar-divider d-none d-sm-block"></div>
@@ -822,15 +822,15 @@ button1:hover {
                 <span class="ml-2 d-none d-lg-inline text-white small"> ᴹᴿ᭄zeeoneㄙ </span>
               </a>
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="https://wa.me/message/JBGU4J2DVYEDK1">
+                <a class="dropdown-item" href="https://wa.me/16318954579">
                   <i class="fab fa-fw fa-whatsapp"></i>
                   Whatsapp
                 </a>
-                <a class="dropdown-item" href="https://t.me/zeeoneofc">
+                <a class="dropdown-item" href="https://t.me/zakigaming7">
                   <i class="fab fa-fw fa-telegram"></i>
                   Telegram
                 </a>
-                <a class="dropdown-item" href="https://www.instagram.com/zeeoneofc">
+                <a class="dropdown-item" href="https://www.instagram.com/shopgame.revo">
                   <i class="fab fa-fw fa-instagram"></i>
                   Instagram
                 </a>
